# strats-feed

./: .env.example  .gitignore  pyproject.toml  requirements.txt  run.py
feed/: __init__.py  bars_codec.py  config.py  kafka_bus.py  market.py  service.py
