[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "strats-feed"
version = "0.1.0"
description = "Fetch and cache market bars; publish bars.fetched to RabbitMQ"
requires-python = ">=3.10"
dependencies = [
    "strats-sdk[rabbitmq] @ git+https://github.com/dim9-git/strats-sdk.git",
    "numpy",
    "pandas",
    "requests",
    "ccxt",
    "pyarrow",
    "python-dotenv",
]

[tool.setuptools.packages.find]
include = ["feed*"]
